-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.93 2007-09-25 23:22:52 remko Exp $
-----------------------------------------------------------------------------------------

2007-09-25	pwessel
	* pslegend.c:		Usage message did not explain the -L option
	
2007-09-25	remko
	* gmtmath.c:		New operator PLMb (normalized as in geodesy).
				Added check that 0 < M < L.
	* grdmath.c:		New operators PLMb and YLMb (normalized as in geodesy).
				Added check that 0 < M < L.
				Set Imaginary component of YL0 = 0 (was same as real).
	* ???math.c:		Set stack size to 100 (as mentioned in manual).
	* src/*/GNUmakefile:	Added to build manpages within each directory.
	* src/manpages.mk:	Makefile included in src/*/GNUmakefile and src/GNUmakefile.
	* makefile:		All other makefiles updated.

2007-09-24	pwessel
	* psxy.c:		Box-and-whisker symbols can now optionally be of the notched
				kind where a 5th data column holding the sample size must be present.
				Activated by appending n to the X or Y in -E.

2007-09-24	remko
	* ???math.c:		Made self-documenting.
	* ???math.func:		Removed. Info is now in ???math.c.
	* make_math.sh:		Changed accordingly.
	* *.txt:		All manpages have become *.1 (except pslib.3)
	* makefile:		All makefiles include install-man, uninstall-man
	* configure.in:		--enable-mansect= removed.
	* website/gmt_install_form.html website/install_gmt_form.pl:	Manpage section removed
	* guru/install_gmt:	---"---
	* guru/*man.sh:		Allow for manpages named *.[135]

2007-09-21	pwessel
	* {gmt,grd}math.c:	Added functions KURT, SKEW, and PQUANT plus EULER's constant
	* grdmath.c:		For -S..k, did not properly account for latitude effect on dx
	* spotter/originator.c:	Added option -Q to specify constant r/t for (x,y,z) data only
				Now lists -L option in both usage and man page
	
2007-09-19	pwessel
	* triangulate.c, pscontour.c:	Synopsis now reports name of algorithm currently
				compiled in [Shewchuk or Watson].
